--- a/PetroStationManager/nbproject/project.properties
+++ b/PetroStationManager/nbproject/project.properties
@@ -29,6 +29,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.barcode4j.jar=/Library/Java/Extensions/barcode4j.jar
+file.reference.com.fasterxml.jackson.databind.jar=/Library/Java/Extensions/com.fasterxml.jackson.databind.jar
+file.reference.mail.jar=/Library/Java/Extensions/mail.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=/Library/Java/Extensions/mysql-connector-java-5.1.23-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +46,11 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.barcode4j.jar}:\
+    ${file.reference.com.fasterxml.jackson.databind.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
